Revert "Put grouped commands in it's own file"
This reverts commit 221ea9174f1388d1d9ba6ab4b536d745905ad2a7.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ rvm:
 script:
   - "if grep '\t' *.md; then echo 'Tabs are bad, please use four spaces.'; false; fi"
   - "if grep -n -r '[[:blank:]]$' *.md; then echo 'Please remove trailing whitespace.'; false; fi"
-  - ./script/cibuild
+  - bundle exec jekyll build
+  - ls ./_site -la
+  - bundle exec htmlproofer ./_site --only-4xx --check-favicon --check-html
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
